force-app/main/default/objects/Test_Scenario__c/Test_Scenario__c.object-meta.xml
<CustomObject>
    <description>SM - This object will hold a collection of test cases.</description>
    <label>Test Scenario</label>
    <nameField>
        <label>Test Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>