force-app/main/default/objects/Test_Scenario__c/fields/Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Support_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Request</label>
    <referenceTo>Support_Request__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>